# guitar-midi-computer-keyboard

./: README.md  midi_computer_keyboard.py  midi_numbers.py  pyproject.toml  simple_guitar_keyboard.py
test/: test_midi_computer_keyboard.py
