[tool.poetry]
name = "guitar-midi-computer-keyboard"
version = "0.1.0"
description = ""
authors = ["Mikey <mikey@techsandthecity.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
mido = "^1.2.9"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
